tests/miniJava/neg/002919_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = String new int [ 0 ] ; } }
